Bug causing temporary files not being deleted fixed, copy function added